--- a/src/components/popup/style/index.scss
+++ b/src/components/popup/style/index.scss
@@ -1,8 +1,8 @@
-@import '../../../../static/style/color.scss';
-@import '../../../../static/style/global.scss';
-@import '../../../../static/style/mixin.scss';
-@import '../../../../static/style/animation.scss';
-@import '../../../../static/style/var.scss';
+@import '../../../style/scss/color.scss';
+@import '../../../style/scss/global.scss';
+@import '../../../style/scss/mixin.scss';
+@import '../../../style/scss/animation.scss';
+@import '../../../style/scss/var.scss';
 
 $prefix: rain-design-popup;
 
